--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,33 @@ a {
 }
 
 .header {
+  position: relative;
+  display: flex;
+  justify-content: start;
+  align-items: center;
   width: 100%;
   height: 84px;
-  position: fixed;
   margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
-  z-index: 999;
+}
+
+.header__title {
+  font-size: 24px;
 }
 
 .header__nav {
   display: none;
-  width: 130px;
+}
+
+.header__nav.active {
+  display: block;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: #fff;
+  width: 350px;
+  height: 100vh;
+  padding: 84px 0 0 50px;
+  z-index: 100;
 }
 
 .header__navItem {
@@ -34,8 +49,22 @@ a {
   color: #008b8b;
 }
 
-.header__nav.active {
-  display: block;
+.header__navBg.active {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: #000;
+  opacity: 0.7;
+  z-index: 99;
+}
+
+.header__navBtnWrapper {
+  position: fixed;
+  top: 0;
+  right: 0;
+  z-index: 100;
 }
 
 .header__navBtn {
@@ -43,6 +72,7 @@ a {
   width: 50px;
   height: 44px;
   margin: 20px;
+  cursor: pointer;
 }
 
 .header__navBtnLine {
@@ -68,13 +98,7 @@ a {
   bottom: 0;
 }
 
-.header__navBtnLine__navBtn {
-  position: relative;
-  width: 50px;
-  height: 44px;
-}
-
-.header__navBtn.active .header__navBtnLine {
+.header__navBtnWrapper.active .header__navBtn .header__navBtnLine {
   position: absolute;
   display: block;
   left: 0;
@@ -85,16 +109,16 @@ a {
   transition: all .4s;
 }
 
-.header__navBtn.active .header__navBtnLine:nth-of-type(1) {
+.header__navBtnWrapper.active .header__navBtn .header__navBtnLine:nth-of-type(1) {
   -webkit-transform: translateY(20px) rotate(-45deg);
   transform: translateY(20px) rotate(-45deg);
 }
 
-.header__navBtn.active .header__navBtnLine:nth-of-type(2) {
+.header__navBtnWrapper.active .header__navBtn .header__navBtnLine:nth-of-type(2) {
   opacity: 0;
 }
 
-.header__navBtn.active .header__navBtnLine:nth-of-type(3) {
+.header__navBtnWrapper.active .header__navBtn .header__navBtnLine:nth-of-type(3) {
   -webkit-transform: translateY(-20px) rotate(45deg);
   transform: translateY(-20px) rotate(45deg);
 }
