--- a/css/style.scss
+++ b/css/style.scss
@@ -12,29 +12,61 @@ a {
 }
 
 .header {
+  position: relative;
+  display: flex;
+  justify-content: start;
+  align-items: center;
   width: 100%;
   height: 84px;
-  position: fixed;
   margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
-  z-index: 999;
+
+  &__title {
+    font-size: 24px;
+  }
 
   &__nav {
     display: none;
-    width: 130px;
+
+    &.active {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      background-color: #fff;
+      width: 350px;
+      height: 100vh;
+      padding: 84px 0 0 50px;
+      z-index: 100;
+    }
   }
 
   &__navItem {
     margin-top: 30px;
+
     a {
       font-size: 14px;
       color: #008b8b;
     }
   }
 
-  &__nav.active {
-    display: block;
+  &__navBg {
+    &.active {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100vh;
+      background: #000;
+      opacity: 0.7;
+      z-index: 99;
+    }
+  }
+
+  &__navBtnWrapper {
+      position: fixed;
+      top: 0;
+      right: 0;
+      z-index: 100;
   }
 
   &__navBtn {
@@ -42,6 +74,7 @@ a {
     width: 50px;
     height: 44px;
     margin: 20px;
+    cursor: pointer;
   }
 
   &__navBtnLine {
@@ -65,43 +98,40 @@ a {
     &:nth-of-type(3) {
       bottom: 0;
     }
-
-    &__navBtn {
-      position: relative;
-      width: 50px;
-      height: 44px;
-    }
   }
 
-  //active
-  &__navBtn.active {
-    .header__navBtnLine {
-      position: absolute;
-      display: block;
-      left: 0;
-      width: 100%;
-      height: 4px;
-      background-color: #000;
-      border-radius: 4px;
-      transition: all .4s;
+  &__navBtnWrapper {
+    &.active {
+      .header__navBtn {
+        .header__navBtnLine {
+          position: absolute;
+          display: block;
+          left: 0;
+          width: 100%;
+          height: 4px;
+          background-color: #000;
+          border-radius: 4px;
+          transition: all .4s;
 
-      &:nth-of-type(1) {
-        -webkit-transform: translateY(20px) rotate(-45deg);
-        transform: translateY(20px) rotate(-45deg);
-      }
+          &:nth-of-type(1) {
+            -webkit-transform: translateY(20px) rotate(-45deg);
+            transform: translateY(20px) rotate(-45deg);
+          }
 
-      &:nth-of-type(2) {
-        opacity: 0;
-      }
-
-      &:nth-of-type(3) {
-        -webkit-transform: translateY(-20px) rotate(45deg);
-        transform: translateY(-20px) rotate(45deg);
+          &:nth-of-type(2) {
+            opacity: 0;
+          }
+          &:nth-of-type(3) {
+            -webkit-transform: translateY(-20px) rotate(45deg);
+            transform: translateY(-20px) rotate(45deg);
+          }
+        }
       }
     }
   }
 }
 
+// main
 .mainVisual {
   width: 100%;
   padding-top: 84px;
