--- a/css/style.scss
+++ b/css/style.scss
@@ -11,14 +11,20 @@ a {
   text-decoration: none;
 }
 
+/*=============================
+* header
+=============================*/
 .header {
-  position: relative;
+  position: fixed;
   display: flex;
   justify-content: start;
   align-items: center;
   width: 100%;
   height: 84px;
   margin: 0 auto;
+  background-color: #fff;
+  box-shadow: 0 0 20px rgba(0, 0, 0, .09);
+  z-index: 100;
 
   &__title {
     font-size: 24px;
@@ -33,7 +39,7 @@ a {
       top: 0;
       right: 0;
       background-color: #fff;
-      width: 350px;
+      width: 250px;
       height: 100vh;
       padding: 84px 0 0 50px;
       z-index: 100;
@@ -131,12 +137,13 @@ a {
   }
 }
 
-// main
+/*=============================
+* main
+=============================*/
 .mainVisual {
   width: 100%;
   padding-top: 84px;
   font-size: 30px;
-  font-weight: bold;
   text-align: center;
   p {
     background-color: #008b8b;
@@ -148,52 +155,78 @@ a {
   }
 }
 
-.lists {
+// section
+.section {
   width: 100%;
-  margin: 50px auto 0;
+  height: 300px;
+  margin-top: 80px;
+
+  &__inner {
+    margin: 0 auto;
+    max-width: 80%;
+    width: 960px;
+  }
+
+  &__title  {
+    background-color: #80c5c5;
+    border-radius: 4px 4px 0 0;
+    padding: 30px;
+    font-size: 20px;
+    color: #fff;
+  }
+
+  &__detail {
+    padding: 30px;
+    border: 2px solid #80c5c5;
+  }
 }
 
 .modalBox {
+  position: relative;
   margin: 0 auto;
   text-align: center;
-}
 
-#open, #close {
-  cursor: pointer;
-  width: 200px;
-  padding: 20px;
-  border: 1px solid #008b8b;
-  border-radius: 4px;
-  text-align: center;
-  margin: 0 auto;
-}
-
-#mask {
-  background: rgba(0, 0, 0, 0.4);
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-}
-
-#modal {
-  background: #fff;
-  width: 300px;
-  padding: 20px;
-  border-radius: 4px;
-  position: absolute;
-  top: 40px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  p {
-    padding-bottom: 20px;
+  &__btn,&__modalCloseBtn {
+    cursor: pointer;
+    width: 200px;
+    padding: 20px;
+    border: 1px solid #008b8b;
+    border-radius: 4px;
+    text-align: center;
+    margin: 0 auto;
   }
-  &.hidden {
-    transform: translate(0, -500px);
+
+  &__mask {
+    background: rgba(0, 0, 0, 0.4);
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+
+    &.is-hidden {
+      display: none;
+    }
   }
-}
-#mask.hidden {
-  display: none;
+
+  &__modal {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #fff;
+    max-width: 300px;
+    width: 80%;
+    padding: 20px;
+    border-radius: 4px;
+
+    &.is-hidden {
+      display: none;
+    }
+    
+
+    p {
+      padding-bottom: 20px;
+    }
+  }
 }
