--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@ a {
   text-decoration: none;
 }
 
+li {
+  list-style: none;
+}
+
 /*=============================
 * header
 =============================*/
@@ -150,7 +154,6 @@ a {
 
 .section {
   width: 100%;
-  height: 300px;
   margin-top: 80px;
 }
 
@@ -169,6 +172,7 @@ a {
 }
 
 .section__detail {
+  height: 250px;
   padding: 30px;
   border: 2px solid #80c5c5;
 }
@@ -177,6 +181,7 @@ a {
   position: relative;
   margin: 0 auto;
   text-align: center;
+  margin-top: 60px;
 }
 
 .modalBox__btn, .modalBox__modalCloseBtn {
@@ -220,4 +225,41 @@ a {
 
 .modalBox__modal p {
   padding-bottom: 20px;
+}
+
+.dropdownMenu__list {
+  display: flex;
+  max-width: 400px;
+  height: 40px;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.dropdownMenu__list > li {
+  width: 400px;
+  height: 40px;
+  text-align: center;
+  margin-left: 1px;
+  background-color: #80C5C5;
+  line-height: 2.5;
+}
+
+.dropdownMenu__list > li:first-child {
+  margin-left: 0px;
+}
+
+.dropdownMenu__listItem {
+  display: none;
+  background-color: #80C5C5;
+}
+
+.dropdownMenu__listItem > li {
+  height: 40px;
+  line-height: 2.5;
+  background-color: #008B8B;
+  margin-top: 1px;
+}
+
+.dropdownMenu__listItem > li a {
+  color: #fff;
 }
