--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,13 @@
 @charset "UTF-8";
 body {
-  box-sizing: border-box;
   font-family: 'Hiragino Kaku Gothic Pro', 'ヒラギノ角ゴ Pro W3', 'メイリオ', Meiryo, 'ＭＳ Ｐゴシック', sans-serif;
   text-decoration: none;
   font-size: 16px;
+}
+
+*, *:before, *:after {
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 a {
@@ -172,7 +176,7 @@ li {
 }
 
 .section__detail {
-  height: 250px;
+  height: 310px;
   padding: 30px;
   border: 2px solid #80c5c5;
 }
@@ -186,7 +190,7 @@ li {
 
 .modalBox__btn, .modalBox__modalCloseBtn {
   cursor: pointer;
-  width: 200px;
+  width: 240px;
   padding: 20px;
   border: 1px solid #008b8b;
   border-radius: 4px;
@@ -279,11 +283,52 @@ li {
 .smoothScrollWrapper .smoothScroll {
   text-align: center;
   display: inline-block;
-  width: 200px;
+  width: 240px;
   padding: 20px;
   border: 1px solid darkcyan;
   border-radius: 4px;
   text-align: center;
   color: #000;
   cursor: pointer;
+}
+
+.tab__list {
+  display: flex;
+  max-width: 600px;
+  height: 40px;
+  margin: 0 auto;
+  color: #fff;
+}
+
+.tab__list > li {
+  width: 600px;
+  height: 40px;
+  text-align: center;
+  margin-left: 1px;
+  background-color: #80C5C5;
+  line-height: 2.5;
+  cursor: pointer;
+}
+
+.tab__list > li:first-child {
+  margin-left: 0px;
+}
+
+.tab__list > li.is-active {
+  background-color: #008B8B;
+}
+
+.tab__Box {
+  display: none;
+  max-width: 600px;
+  height: 150px;
+  padding: 30px;
+  line-height: 1.5;
+  margin: 0 auto;
+  color: #fff;
+  background-color: #008B8B;
+}
+
+.tab__Box.is-active {
+  display: block;
 }
