--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,50 @@ li {
 }
 
 /*=============================
+* Loading Action
+=============================*/
+.loading {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-color: #fff;
+  z-index: 200;
+
+  &__contents {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+
+    img {
+      width: 250px;
+      height: 244px;
+      margin-left: -125px;
+      margin-top: -125px;
+    }
+
+    p {
+      width: 250px;
+      margin-left: -125px;
+      padding-top: 10px;
+      text-align: center;
+      font-size: 20px;
+      font-weight: bold;
+    }
+  }
+}
+
+/*=============================
+* contentsWrapper
+=============================*/
+.contentsWrapper {
+
+  &.is-hidden {
+    display: none;
+  }
+}
+
+/*=============================
 * header
 =============================*/
 .header {
